# git-sync-upstream

./: LICENSE  MANIFEST.in  README.md  README.rst  gitsyncupstream.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
gitsyncupstream/: __main__.py  git.py
