[metadata]
name = git-sync-upstream
version = 1.0.3
description = Sync git upstream remote branches and tags to local clone and origin remote
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = gitsyncupstream
include_package_data = true

[options.entry_points]
console_scripts =
    git-sync-upstream = gitsyncupstream.__main__:main

[flake8]
max-line-length = 88
